# blather

./: Cargo.toml
src/: codec.rs  err.rs  kvlines.rs  lib.rs  params.rs  telegram.rs  types.rs  validators.rs
src/types/: kvlines.rs  params.rs  telegram.rs  validators.rs
tests/: conn_telegram.rs  params.rs  params_strvec.rs  telegram.rs  tg_to_expect.rs
