[package]
name = "blather"
version = "0.1.4"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "line-based", "protocol" ]
repository = "https://github.com/openqrnch/blather"
description = "Helper objects for a talkative line-based protocol"

[features]
#default = ["bytes"]

[dependencies]
bytes = { version = "0.5", optional = true }

