[package]
name = "blather"
version = "0.5.1"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "line-based", "protocol", "tokio", "codec" ]
repository = "https://github.com/openqrnch/blather"
description = "A talkative line-based protocol"

[dependencies]
bytes = { version = "0.5" }
futures = { version = "0.3" }
tokio = { version = "0.2", features = ["net", "macros", "io-util"] }
tokio-util = { version= "0.3", features = ["codec"] }

[dev-dependencies]
tokio-test = { version = "0.2.0" }

# vim: set ft=toml et sw=2 ts=2 sts=2 cinoptions=2 tw=79 :
