[package]
name = "blather"
version = "0.7.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "line-based", "protocol", "tokio", "codec" ]
repository = "https://github.com/openqrnch/blather"
description = "A talkative line-based protocol"

[dependencies]
bytes = { version = "1.0.0" }
futures = { version = "0.3" }
tokio = { version = "1.0.0" }
tokio-util = { version= "0.6", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.0.0", features = ["macros"] }
tokio-stream = { version = "0.1" }
tokio-test = { version = "0.4" }

# vim: set ft=toml et sw=2 ts=2 sts=2 cinoptions=2 tw=79 :
